# sphinx-simplepdf

./: .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yaml
docs/: changelog.rst  conf.py  directives.rst  doc-requirements.txt
sphinx_simplepdf/builders/: debug.py  simplepdf.py
sphinx_simplepdf/writers/: simplepdf.py
