[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-simplepdf"
version = "1.7.0"
description = "An easy to use PDF Builder for Sphinx with a modern PDF-Theme."
readme = "README.rst"
license = "MIT"
authors = [{ name = "team useblocks", email = "info@useblocks.com" }]
requires-python = ">=3.10"
classifiers = [
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Extension",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = ["sphinx", "weasyprint>=67.0", "libsass", "beautifulsoup4"]

[project.urls]
Homepage = "https://sphinx-simplepdf.readthedocs.io"
Repository = "https://github.com/useblocks/sphinx-simplepdf"
Documentation = "https://sphinx-simplepdf.readthedocs.io"

[project.entry-points."sphinx.html_themes"]
simplepdf_theme = "sphinx_simplepdf.themes.simplepdf_theme"

[project.entry-points."sphinx.builders"]
simplepdf = "sphinx_simplepdf.builders.simplepdf"

[project.optional-dependencies]
test = ["nox", "pytest", "pytest-xdist", "pytest-cov"]
docs = [
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-immaterial",
  "sphinx-needs",
  "sphinxcontrib-plantuml",
]

[dependency-groups]
dev = [
  "pre-commit~=3.0",
  "nox>=2025.2.9",
  "mypy>=1.16.0",
  "pytest",
  "pytest-xdist",
  "pytest-cov",
]

[tool.flit.module]
name = "sphinx_simplepdf"

[tool.flit.sdist]
include = [
  "AUTHORS.rst",
  "README.rst",
  "sphinx_simplepdf/themes/simplepdf_theme/theme.conf",
  "sphinx_simplepdf/themes/simplepdf_theme/*.html",
  "sphinx_simplepdf/themes/simplepdf_theme/static/",
]
exclude = ["**/__pycache__", "**/*.py[co]"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["sphinx_simplepdf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", "docs", "demo"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
no_implicit_reexport = true
exclude = ["^docs/", "^demo/", "^\\.venv/"]
